--- a/App/form.ui
+++ b/App/form.ui
@@ -24,7 +24,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab_UnirPDF">
        <attribute name="title">
@@ -37,23 +37,62 @@
            <enum>QLayout::SizeConstraint::SetMinimumSize</enum>
           </property>
           <item>
-           <widget class="QLabel" name="label">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+           <layout class="QGridLayout" name="gridLayout" columnstretch="0,0">
+            <property name="sizeConstraint">
+             <enum>QLayout::SizeConstraint::SetFixedSize</enum>
             </property>
-            <property name="minimumSize">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
+            <property name="spacing">
+             <number>0</number>
             </property>
-            <property name="text">
-             <string>Selecciona PDFs:</string>
-            </property>
-           </widget>
+            <item row="0" column="1">
+             <widget class="QToolButton" name="toolButton">
+              <property name="sizeIncrement">
+               <size>
+                <width>2</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="layoutDirection">
+               <enum>Qt::LayoutDirection::RightToLeft</enum>
+              </property>
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Selecciona PDFs:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <spacer name="horizontalSpacer_8">
+              <property name="orientation">
+               <enum>Qt::Orientation::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
@@ -462,6 +501,63 @@
          <string>Guardar</string>
         </property>
        </widget>
+       <widget class="QLabel" name="label_12">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>70</y>
+          <width>101</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>20</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Hojas:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="HojasSeparar_3">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>90</y>
+          <width>497</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="checkBoxSplitAll">
+        <property name="geometry">
+         <rect>
+          <x>520</x>
+          <y>90</y>
+          <width>111</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="whatsThis">
+         <string>Crea un 2do PDF con las hojas no elegidas.</string>
+        </property>
+        <property name="text">
+         <string>Separar Todas</string>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="tab_HojaBlanco">
        <attribute name="title">
@@ -600,7 +696,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget_2">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
@@ -842,6 +938,38 @@
    <addaction name="menuNada"/>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>toolButton</tabstop>
+  <tabstop>FileSelector_1</tabstop>
+  <tabstop>ButtonFileSelect</tabstop>
+  <tabstop>checkBox</tabstop>
+  <tabstop>checkBox_2</tabstop>
+  <tabstop>SaveButton</tabstop>
+  <tabstop>FileSelector_2</tabstop>
+  <tabstop>ButtonFileSelect_2</tabstop>
+  <tabstop>HojasSeparar</tabstop>
+  <tabstop>checkBoxConsevar</tabstop>
+  <tabstop>NombreExtra</tabstop>
+  <tabstop>SaveButton_2</tabstop>
+  <tabstop>FileSelector_3</tabstop>
+  <tabstop>ButtonFileSelect_3</tabstop>
+  <tabstop>HojasSeparar_3</tabstop>
+  <tabstop>checkBoxSplitAll</tabstop>
+  <tabstop>SaveButton_3</tabstop>
+  <tabstop>FileSelector_4</tabstop>
+  <tabstop>ButtonFileSelect_4</tabstop>
+  <tabstop>HojasSeparar_2</tabstop>
+  <tabstop>SaveButton_4</tabstop>
+  <tabstop>tabWidget_2</tabstop>
+  <tabstop>FileSelector_5</tabstop>
+  <tabstop>ButtonFileSelect_5</tabstop>
+  <tabstop>SaveButton_5</tabstop>
+  <tabstop>FileSelector_6</tabstop>
+  <tabstop>ButtonFileSelect_6</tabstop>
+  <tabstop>SaveButton_6</tabstop>
+  <tabstop>tabWidget_3</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
@@ -852,7 +980,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>925</x>
-     <y>106</y>
+     <y>130</y>
     </hint>
     <hint type="destinationlabel">
      <x>493</x>
@@ -916,7 +1044,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>604</x>
-     <y>307</y>
+     <y>326</y>
     </hint>
     <hint type="destinationlabel">
      <x>596</x>
@@ -948,7 +1076,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>626</x>
-     <y>313</y>
+     <y>332</y>
     </hint>
     <hint type="destinationlabel">
      <x>1022</x>
@@ -980,7 +1108,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>509</x>
-     <y>201</y>
+     <y>220</y>
     </hint>
     <hint type="destinationlabel">
      <x>509</x>
@@ -996,11 +1124,107 @@
    <hints>
     <hint type="sourcelabel">
      <x>493</x>
-     <y>411</y>
+     <y>430</y>
     </hint>
     <hint type="destinationlabel">
      <x>509</x>
      <y>318</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxSplitAll</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>HojasSeparar_3</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>586</x>
+     <y>158</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>269</x>
+     <y>159</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxSplitAll</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>label_12</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>586</x>
+     <y>158</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>71</x>
+     <y>137</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>SaveButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>MyLovePDF</receiver>
+   <slot>SepararPDF()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>184</x>
+     <y>193</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1023</x>
+     <y>191</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>SaveButton_6</sender>
+   <signal>clicked()</signal>
+   <receiver>MyLovePDF</receiver>
+   <slot>PDFtoImage()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>205</x>
+     <y>367</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1093</x>
+     <y>398</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>SaveButton_3</sender>
+   <signal>clicked()</signal>
+   <receiver>MyLovePDF</receiver>
+   <slot>SepararHojas()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>449</x>
+     <y>189</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1091</x>
+     <y>239</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>SaveButton_4</sender>
+   <signal>clicked()</signal>
+   <receiver>MyLovePDF</receiver>
+   <slot>HojaBlanco()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>461</x>
+     <y>200</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1072</x>
+     <y>219</y>
     </hint>
    </hints>
   </connection>
@@ -1009,6 +1233,10 @@
   <slot>selectFile()</slot>
   <slot>UnirPDF()</slot>
   <slot>ImageToPDF()</slot>
+  <slot>SepararPDF()</slot>
+  <slot>SepararHojas()</slot>
+  <slot>HojaBlanco()</slot>
+  <slot>PDFtoImage()</slot>
  </slots>
  <buttongroups>
   <buttongroup name="buttonGroup"/>
