--- a/App/form.ui
+++ b/App/form.ui
@@ -157,28 +157,64 @@
            </layout>
           </item>
           <item>
-           <widget class="QLabel" name="label_2">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+           <layout class="QHBoxLayout" name="horizontalLayout_6">
+            <property name="spacing">
+             <number>20</number>
             </property>
-            <property name="minimumSize">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Documento Par:</string>
-            </property>
-           </widget>
+            <item>
+             <widget class="QLabel" name="label_2">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Documento Par:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="ModernCheckBox" name="checkBoxDocPar">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>CheckBox</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_6">
+              <property name="orientation">
+               <enum>Qt::Orientation::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
              <widget class="QCheckBox" name="checkBox">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
               <property name="styleSheet">
                <string notr="true"/>
               </property>
@@ -765,8 +801,8 @@
        <widget class="QLabel" name="label_11">
         <property name="geometry">
          <rect>
-          <x>740</x>
-          <y>10</y>
+          <x>750</x>
+          <y>30</y>
           <width>211</width>
           <height>111</height>
          </rect>
@@ -784,7 +820,7 @@
          </size>
         </property>
         <property name="text">
-         <string>FOTO</string>
+         <string/>
         </property>
        </widget>
        <widget class="ButtonListWidget" name="ListFileSelector_2">
@@ -807,6 +843,19 @@
           <width>16777215</width>
           <height>100</height>
          </size>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="ButtonFileSelect_5">
+        <property name="geometry">
+         <rect>
+          <x>620</x>
+          <y>30</y>
+          <width>110</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Seleccionar archivo</string>
         </property>
        </widget>
       </widget>
@@ -944,6 +993,11 @@
   <customwidget>
    <class>ButtonListWidget</class>
    <extends>QListWidget</extends>
+   <header>widgets</header>
+  </customwidget>
+  <customwidget>
+   <class>ModernCheckBox</class>
+   <extends>QCheckBox</extends>
    <header>widgets</header>
   </customwidget>
  </customwidgets>
@@ -1213,6 +1267,54 @@
     <hint type="destinationlabel">
      <x>1072</x>
      <y>219</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxDocPar</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>checkBox</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>765</x>
+     <y>239</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>203</x>
+     <y>269</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxDocPar</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>checkBox_2</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>765</x>
+     <y>239</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>573</x>
+     <y>269</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>ButtonFileSelect_5</sender>
+   <signal>clicked()</signal>
+   <receiver>MyLovePDF</receiver>
+   <slot>selectFile()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>685</x>
+     <y>400</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>516</x>
+     <y>389</y>
     </hint>
    </hints>
   </connection>
