--- a/App/res_rc.qrc
+++ b/App/res_rc.qrc
@@ -2,5 +2,14 @@
     <qresource prefix="/resources">
         <file>resources/uicons-regular-rounded/fi-rr-interrogation.svg</file>
         <file>resources/uicons-regular-rounded/fi-rr-files-medical.svg</file>
+        <file>resources/bgPDF.png</file>
+        <file>resources/bgFILE.png</file>
+        <file>resources/bgIMG.png</file>
+        <file>resources/bgIMG2.png</file>
+        <file>resources/bgIMG3.png</file>
+        <file>resources/bgFILE2.png</file>
+        <file>resources/bgFILE3.png</file>
+        <file>resources/bgPDF2.png</file>
+        <file>resources/bgPDF3.png</file>
     </qresource>
 </RCC>
