--- a/App/res_rc.qrc
+++ b/App/res_rc.qrc
@@ -1,16 +1,11 @@
 <RCC>
     <qresource prefix="/resources">
-        <file>resources/uicons-regular-rounded/fi-rr-interrogation.svg</file>
-        <file>resources/uicons-regular-rounded/fi-rr-files-medical.svg</file>
         <file>resources/bgFILE.png</file>
         <file>resources/bgIMG.png</file>
         <file>resources/bgIMG2.png</file>
         <file>resources/bgIMG3.png</file>
         <file>resources/bgFILE2.png</file>
         <file>resources/bgFILE3.png</file>
-        <file>resources/uicons-regular-rounded/fi-rr-add-document.svg</file>
-        <file>resources/uicons-regular-rounded/fi-rr-add-folder.svg</file>
-        <file>resources/uicons-regular-rounded/fi-rr-refresh.svg</file>
         <file>resources/NoImage.svg</file>
         <file>resources/bgPDF2.png</file>
         <file>resources/bgPDF3.png</file>
@@ -20,5 +15,10 @@
         <file>resources/bgMSC2.png</file>
         <file>resources/bgMSC3.png</file>
         <file>resources/bgMSC4.png</file>
+        <file>resources/fi-rr-add-document.svg</file>
+        <file>resources/fi-rr-add-folder.svg</file>
+        <file>resources/fi-rr-files-medical.svg</file>
+        <file>resources/fi-rr-interrogation.svg</file>
+        <file>resources/fi-rr-refresh.svg</file>
     </qresource>
 </RCC>
